# api/internal/admin/routes.go
@@ -1,12 +1,14 @@
 package admin
 
 import (
+	"crypto/ed25519"
+	"net/http"
+
 	adminevents "auth/internal/admin/events"
+	adminrefreshtokens "auth/internal/admin/refresh_tokens"
 	adminroles "auth/internal/admin/roles"
 	adminusers "auth/internal/admin/users"
 	"auth/internal/middleware"
-	"crypto/ed25519"
-	"net/http"
 
 	"github.com/go-chi/chi/v5"
 )
@@ -19,6 +21,7 @@ func Router(s *AdminService, jwtAccessKey ed25519.PublicKey, issuer string) http
 	r.Mount("/users", adminusers.Router(s.Users))
 	r.Mount("/roles", adminroles.Router(s.Roles))
 	r.Mount("/events", adminevents.Router(s.Events))
+	r.Mount("/refresh-tokens", adminrefreshtokens.Router(s.RefreshTokens))
 
 	return r
 }
